<resources>
    <string name="app_name">Somatosoft</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="title_activity_side_image_screen">SideImageScreen</string>
    <string name="title_activity_user_data_screen">UserDataScreen</string>
    <string name="m_todo_heart_carter_1_3">Método Heath-Carter (1/3)</string>
    <string name="m_todo_heart_carter_2_3">Método Heath-Carter (2/3)</string>
    <string name="m_todo_heart_carter_3_3">Método Heath-Carter (3/3)</string>
    <string name="estatura_em_extens_o_m_xima">Estatura em extensão máxima</string>
    <string name="massa_corporal">Massa corporal</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="prx_page">Próxima página</string>
    <string name="dobra_cut_nea_panturrilha_medial">Dobra cutânea panturrilha medial</string>
    <string name="dobra_cut_nea_subescapular">Dobra cutânea subescapular</string>
    <string name="dobra_cut_nea_supra_espinhal">Dobra cutânea supra espinhal</string>
    <string name="dobra_cut_nea_de_tr_ceps">Dobra cutânea de tríceps</string>
    <string name="calcular">Calcular</string>
    <string name="per_metro_de_panturrilha">Perímetro de panturrilha</string>
    <string name="per_metro_de_bra_o_flexionado_em_contra_o_m_xima">Perímetro de braço flexionado em contração máxima</string>
    <string name="di_metro_sseo_bi_epicondilar_de_f_mur">Diâmetro ósseo bi-epicondilar de fêmur</string>
    <string name="di_metro_sseo_bi_epicondilar_de_mero">Diâmetro ósseo bi-epicondilar de úmero</string>
    <string name="usu_rio">Usuário</string>
</resources>
